--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/hero.css">
@@ -28,6 +25,11 @@
 
     <script src="js/about_terminal_type.js" defer></script>
     <script src="js/about_projects_swiper.js" defer></script>
+    <script src="js/arrow_up.js" defer></script>
+    <script src="js/nav_burger.js" defer></script>
+    <script src="js/hero_typed_text.js" defer></script>
+    <script src="js/hero_animation.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -35,29 +37,24 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <a href="index.html">
             <img src="images/logo.png" alt="Logo">
             <h2>GishDev</h2>
         </a>
+
+        <button class="hamburger" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
         <nav>
             <ul>
-                <a href="">
-                    <i class="fa-solid fa-house"></i>
-                    <li>Strona Główna</li>
-                </a>
-                <a href="">
-                    <i class="fa-solid fa-circle-info"></i>
-                    <li>O nas</li>
-                </a>
-                <a href="">
-                    <i class="fa-solid fa-diagram-project"></i>
-                    <li>Usługi</li>
-                </a>
-                <a href="">
-                    <i class="fa-solid fa-envelope"></i>
-                    <li>Kontakt</li>
-                </a>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
+                <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
+                <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -67,13 +64,17 @@
             <div class="hero__content">
                 <div class="hero__content--textbox">
                     <h1>Gish<span>Dev</span></h1>
-                    <p id="hero__content--textbox-typed-text">Web Development</p>
+                    <div class="hero__content--textbox-text">
+                        <p id="hero__content--textbox-typed-text"></p>
+                        <span id="hero__content--textbox-typed-text-cursor">|</span>
+                    </div>
                     <div class="hero__content--textbox-line"></div>
                     <p>Twój biznes w sieci zaczyna się od nas – profesjonalny web design, który przyciąga i sprzedaje!
                     </p>
                     <div class="hero__content--textbox--btn-box">
-                        <a href="" class="hero__content--textbox-btn">Projekty</a>
-                        <a href="" class="hero__content--textbox-btn">O nas</a>
+                        <a href="https://useme.com/pl/roles/contractor/gishdev,461974" target="_blank"
+                            class="hero__content--textbox-btn">Projekty</a>
+                        <a href="o-nas.html" class="hero__content--textbox-btn">O nas</a>
                     </div>
                 </div>
             </div>
@@ -103,21 +104,21 @@
                 <div class="about__selected-projects--box">
                     <h2>Nasze projekty</h2>
                     <div class="about__selected-projects--box-line"></div>
-                    <div class="swiper">
+                    <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="images/clothing_website.png" alt="project_image"></div>
                             <div class="swiper-slide"><img src="images/carshare_website.png" alt="project_image"></div>
                             <div class="swiper-slide"><img src="images/dentist_website.png" alt="project_image"></div>
                             <div class="swiper-slide"><img src="images/barber_website.png" alt="project_image"></div>
                         </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
+                        <div class="swiper-pagination"></div>
                     </div>
                     <a href="https://useme.com/pl/roles/contractor/gishdev,461974" target="_blank"
                         class="about__selected-projects--box-btn">Zobacz więcej</a>
                 </div>
             </div>
         </section>
+        <a href="#header" id="arrow_up"><i class="fa-solid fa-chevron-up"></i></a>
     </main>
 
     <footer>
