added about subpage

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                     <p>Twój biznes w sieci zaczyna się od nas – profesjonalny web design, który przyciąga i sprzedaje!
                     </p>
                     <div class="hero__content--textbox--btn-box">
-                        <a href="https://useme.com/pl/roles/contractor/gishdev,461974" target="_blank"
-                            class="hero__content--textbox-btn">Projekty</a>
+                        <a href="#projekty" class="hero__content--textbox-btn">Projekty</a>
                         <a href="o-nas.html" class="hero__content--textbox-btn">O nas</a>
                     </div>
                 </div>
@@ -100,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about__selected-projects">
+            <div class="about__selected-projects" id="projekty">
                 <div class="about__selected-projects--box">
                     <h2>Nasze projekty</h2>
                     <div class="about__selected-projects--box-line"></div>
