--- a/o-nas.html
+++ b/o-nas.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/about_us.css">
 
     <script src="js/arrow_up.js" defer></script>
     <script src="js/nav_burger.js" defer></script>
@@ -52,7 +53,65 @@
     </header>
 
     <main>
-        
+        <div class="about_us">
+            <div class="about_us__content">
+                <div class="about_us__content--container" id="about_us__content--container-fst">
+                    <h2>O nas</h2>
+                    <div class="about_us_content--container-item">
+                        <div class="item--container">
+                            <h3>Kim Jesteśmy?</h3>
+                            <p>Jesteśmy GishDev – młodym, dynamicznym zespołem tworzonym przez czworo ambitnych
+                                studentów, którzy właśnie rozpoczynają swoją przygodę w branży IT. Łączy nas pasja do
+                                technologii, zaangażowanie oraz świeże pomysły, które chcemy wnieść na rynek.</p>
+                        </div>
+                        <div class="item--container">
+                            <h3>Co Tworzymy?</h3>
+                            <p>Tworzymy nowoczesne aplikacje i rozwiązania technologiczne dostosowane do potrzeb naszych
+                                klientów. Stawiamy na innowacyjność, intuicyjny design i niezawodność. Dzięki świeżemu
+                                spojrzeniu oraz zaangażowaniu koncentrujemy się na projektach, które łączą
+                                funkcjonalność z kreatywnością.</p>
+                        </div>
+                        <div class="item--container">
+                            <h3>Co Potrafimy?</h3>
+                            <p>Choć dopiero zaczynamy naszą przygodę w branży, już teraz koncentrujemy się na tworzeniu
+                                nowoczesnych aplikacji i stron internetowych z wykorzystaniem języków takich jak HTML,
+                                CSS i JavaScript. Nasza świeża perspektywa i chęć ciągłego rozwoju pozwalają nam tworzyć
+                                rozwiązania, które łączą estetykę, funkcjonalność i innowacyjność.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about_us__content--container" id="about_us__content--container-snd">
+                    <h2 id="about_us__our_goals">Nasze Cele</h2>
+                    <div class="about_us_content--container-item">
+                        <div class="item--container">
+                            <h3>Rozwój umiejętności i doświadczenia</h3>
+                            <p>Jako młody, dynamiczny zespół nieustannie rozwijamy swoje umiejętności i poszerzamy
+                                wiedzę, ucząc się nowych technologii oraz doskonaląc nasze kompetencje. Dzięki temu
+                                jesteśmy w stanie dostarczać produkty o coraz wyższej jakości, które spełniają
+                                oczekiwania naszych klientów. Naszym celem jest ciągły rozwój i dążenie do doskonałości.
+                            </p>
+                        </div>
+                        <div class="item--container">
+                            <h3>Budowanie relacji z klientami</h3>
+                            <p>Wierzymy, że sukces każdej współpracy opiera się na wzajemnym zrozumieniu i zaufaniu.
+                                Stawiamy na otwartą komunikację z naszymi klientami, aby jak najlepiej poznać ich
+                                potrzeby i oczekiwania. Dzięki indywidualnemu podejściu możemy tworzyć rozwiązania,
+                                które idealnie wpisują się w ich wizję, jednocześnie budując długotrwałe relacje
+                                biznesowe.</p>
+                        </div>
+                        <div class="item--container">
+                            <h3>Rozwój innowacyjnych rozwiązań</h3>
+                            <p>W dynamicznie zmieniającej się branży IT kluczowe jest wprowadzanie nowych, kreatywnych
+                                pomysłów. Dążymy do tworzenia rozwiązań, które nie tylko spełniają oczekiwania klientów,
+                                ale także wyznaczają nowe standardy w projektowaniu stron internetowych. Innowacyjność
+                                pozwala nam dostarczać produkty, które są funkcjonalne, estetyczne i gotowe na
+                                przyszłość.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="#header" id="arrow_up"><i class="fa-solid fa-chevron-up"></i></a>
     </main>
 
     <footer>
