--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
                 <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
                 <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
+                <li><a href="kontakt.html"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
     </header>
