--- a/o-nas.html
+++ b/o-nas.html
@@ -47,13 +47,13 @@
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
                 <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
                 <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
+                <li><a href="kontakt.html"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="about_us">
+        <section class="about_us">
             <div class="about_us__content">
                 <div class="about_us__content--container" id="about_us__content--container-fst">
                     <h2>O nas</h2>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <a href="#header" id="arrow_up"><i class="fa-solid fa-chevron-up"></i></a>
     </main>
 
