--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/footer.css">
 
-    <script src="js/about_terminal_type.js" defer></script>
-    <script src="js/about_projects_swiper.js" defer></script>
-    <script src="js/arrow_up.js" defer></script>
-    <script src="js/nav_burger.js" defer></script>
-    <script src="js/hero_typed_text.js" defer></script>
-    <script src="js/hero_animation.js"></script>
+    <script src="js/about/about_terminal_type.js" defer></script>
+    <script src="js/about/about_projects_swiper.js" defer></script>
+    <script src="js/main/arrow_up.js" defer></script>
+    <script src="js/main/nav_burger.js" defer></script>
+    <script src="js/hero/hero_typed_text.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/assets/favicon.ico" type="image/x-icon">
 
     <title>GishDev</title>
 </head>
@@ -39,7 +38,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img src="images/logo.png" alt="Logo">
+            <img src="images/assets/logo.png" alt="Logo">
             <h2>GishDev</h2>
         </a>
 
@@ -53,7 +52,7 @@
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
                 <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
-                <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
+                <li><a href="uslugi.html"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
                 <li><a href="kontakt.html"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
@@ -79,7 +78,7 @@
             </div>
             <div class="hero__animation">
                 <video autoplay muted loop playslinline>
-                    <source src="images/hero_animation.mp4" type="video/mp4">
+                    <source src="images/assets/hero_animation.mp4" type="video/mp4">
                 </video>
             </div>
         </section>
@@ -105,10 +104,14 @@
                     <div class="about__selected-projects--box-line"></div>
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="images/clothing_website.png" alt="project_image"></div>
-                            <div class="swiper-slide"><img src="images/carshare_website.png" alt="project_image"></div>
-                            <div class="swiper-slide"><img src="images/dentist_website.png" alt="project_image"></div>
-                            <div class="swiper-slide"><img src="images/barber_website.png" alt="project_image"></div>
+                            <div class="swiper-slide"><img src="images/websites_previews/clothing_website.png"
+                                    alt="project_image"></div>
+                            <div class="swiper-slide"><img src="images/websites_previews/carshare_website.png"
+                                    alt="project_image"></div>
+                            <div class="swiper-slide"><img src="images/websites_previews/dentist_website.png"
+                                    alt="project_image"></div>
+                            <div class="swiper-slide"><img src="images/websites_previews/barber_website.png"
+                                    alt="project_image"></div>
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
@@ -125,8 +128,8 @@
         <p>© 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
         <div class="footer__buttons">
             <a href="https://www.facebook.com/GishDevelopment" class="footer__buttons--btn" target="_blank">Facebook</a>
-            <a href="" class="footer__buttons--btn">Polityka prywatności</a>
-            <a href="" class="footer__buttons--btn">RODO</a>
+            <a href="polityka-prywatnosci.html" class="footer__buttons--btn">Polityka prywatności</a>
+            <a href="RODO.html" class="footer__buttons--btn">RODO</a>
         </div>
     </footer>
 </body>
