--- a/kontakt.html
+++ b/kontakt.html
@@ -21,11 +21,11 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/contact.css">
 
-    <script src="js/arrow_up.js" defer></script>
-    <script src="js/nav_burger.js" defer></script>
-    <script src="js/contact_textarea_resize.js" defer></script>
+    <script src="js/main/arrow_up.js" defer></script>
+    <script src="js/main/nav_burger.js" defer></script>
+    <script src="js/contact/contact_textarea_resize.js" defer></script>
 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/assets/favicon.ico" type="image/x-icon">
 
     <title>GishDev - Kontakt</title>
 </head>
@@ -33,7 +33,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img src="images/logo.png" alt="Logo">
+            <img src="images/assets/logo.png" alt="Logo">
             <h2>GishDev</h2>
         </a>
 
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
                 <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
-                <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
+                <li><a href="uslugi.html"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
                 <li><a href="kontakt.html"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
@@ -67,7 +67,7 @@
                             <i class="fa-solid fa-phone"></i>
                             <div class="contact-us-options--item-text">
                                 <h2>Telefon</h2>
-                                <p>792-601-445</p>
+                                <p><a href="tel:+48792601445">792-601-445</a></p>
                             </div>
                         </div>
                         <div class="contact-us-options--item">
@@ -98,8 +98,8 @@
                             <div class="contact-form__agreement">
                                 <input type="checkbox" name="agreement" id="agreement">
                                 <label for="agreement"> Wyrażam zgodę na przetwarzanie moich danych osobowych zgodnie z
-                                    <a href="/polityka-prywatnosci" target="_blank">Polityką prywatności</a> i <a
-                                        href="/RODO" target="_blank">RODO</a>
+                                    <a href="polityka-prywatnosci.html" target="_blank">Polityką prywatności</a> i <a
+                                        href="RODO.html" target="_blank">RODO</a>
                                 </label>
                             </div>
                             <div class="contact-form__submit">
@@ -119,8 +119,8 @@
         <p>© 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
         <div class="footer__buttons">
             <a href="https://www.facebook.com/GishDevelopment" class="footer__buttons--btn" target="_blank">Facebook</a>
-            <a href="" class="footer__buttons--btn">Polityka prywatności</a>
-            <a href="" class="footer__buttons--btn">RODO</a>
+            <a href="polityka-prywatnosci.html" class="footer__buttons--btn">Polityka prywatności</a>
+            <a href="RODO.html" class="footer__buttons--btn">RODO</a>
         </div>
     </footer>
 </body>
