--- a/o-nas.html
+++ b/o-nas.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/about_us.css">
 
-    <script src="js/arrow_up.js" defer></script>
-    <script src="js/nav_burger.js" defer></script>
+    <script src="js/main/arrow_up.js" defer></script>
+    <script src="js/main/nav_burger.js" defer></script>
 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/assets/favicon.ico" type="image/x-icon">
 
     <title>GishDev - O nas</title>
 </head>
@@ -32,7 +32,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img src="images/logo.png" alt="Logo">
+            <img src="images/assets/logo.png" alt="Logo">
             <h2>GishDev</h2>
         </a>
 
@@ -46,7 +46,7 @@
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>Strona Główna</a></li>
                 <li><a href="o-nas.html"><i class="fa-solid fa-circle-info"></i>O nas</a></li>
-                <li><a href="#"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
+                <li><a href="uslugi.html"><i class="fa-solid fa-diagram-project"></i>Usługi</a></li>
                 <li><a href="kontakt.html"><i class="fa-solid fa-envelope"></i>Kontakt</a></li>
             </ul>
         </nav>
@@ -119,8 +119,8 @@
         <p>© 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
         <div class="footer__buttons">
             <a href="https://www.facebook.com/GishDevelopment" class="footer__buttons--btn" target="_blank">Facebook</a>
-            <a href="" class="footer__buttons--btn">Polityka prywatności</a>
-            <a href="" class="footer__buttons--btn">RODO</a>
+            <a href="polityka-prywatnosci.html" class="footer__buttons--btn">Polityka prywatności</a>
+            <a href="RODO.html" class="footer__buttons--btn">RODO</a>
         </div>
     </footer>
 </body>
