final bug fixes

--- a/kontakt.html
+++ b/kontakt.html
@@ -110,13 +110,13 @@
                 </div>
             </div>
         </section>
-
+        <span id="send_message">Wiadomość została wysłana!</span>
         <a href="#header" id="arrow_up"><i class="fa-solid fa-chevron-up"></i></a>
     </main>
 
     <footer>
         <h2>GishDev</h2>
-        <p>© 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
         <div class="footer__buttons">
             <a href="https://www.facebook.com/GishDevelopment" class="footer__buttons--btn" target="_blank">Facebook</a>
             <a href="polityka-prywatnosci.html" class="footer__buttons--btn">Polityka prywatności</a>
