--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -122,7 +122,7 @@
 
     <footer>
         <h2>GishDev</h2>
-        <p>© 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2025 GishDev. Wszelkie prawa zastrzeżone.</p>
         <div class="footer__buttons">
             <a href="https://www.facebook.com/GishDevelopment" class="footer__buttons--btn" target="_blank">Facebook</a>
             <a href="polityka-prywatnosci.html" class="footer__buttons--btn">Polityka prywatności</a>
